tests/ui/attributes/crablangc-box.stderr
error: `#[crablangc_box]` attribute used incorrectly
  --> $DIR/crablangc-box.rs:10:5
   |
LL |     Box::pin(1);
   |     ^^^^^^^^^^^
   |
   = note: `#[crablangc_box]` may only be applied to a `Box::new()` call

error: `#[crablangc_box]` attribute used incorrectly
  --> $DIR/crablangc-box.rs:12:5
   |
LL |     foo(1, 1);
   |     ^^^^^^^^^
   |
   = note: `#[crablangc_box]` may only be applied to a `Box::new()` call

error: `#[crablangc_box]` attribute used incorrectly
  --> $DIR/crablangc-box.rs:14:5
   |
LL |     bar(1);
   |     ^^^^^^
   |
   = note: `#[crablangc_box]` may only be applied to a `Box::new()` call

error: `#[crablangc_box]` attribute used incorrectly
  --> $DIR/crablangc-box.rs:15:5
   |
LL |     #[crablangc_box]
   |     ^^^^^^^^^^^^
   |
   = note: no other attributes may be applied

error: aborting due to 4 previous errors

